@@ -34,73 +34,215 @@
 
 const char program[] = "vmux";
 const char author[]  = "Walter Brisken <wbrisken@nrao.edu>";
-const char version[] = "0.6";
-const char verdate[] = "20150923";
+const char version[] = "0.7";
+const char verdate[] = "20151117";
 
 const int defaultChunkSize = 2000000;
+
+void usage(const char *pgm)
+{
+	fprintf(stderr, "\n%s ver. %s  %s  %s\n\n", program, version, author, verdate);
+	fprintf(stderr, "Usage: %s [options] <inputFile> <inputFrameSize> <framesPerSecond>\n   <threadList> <outputFile> [<offset> [<chunkSize>] ]\n", pgm);
+	fprintf(stderr, "\nA program to take a multi-thread VDIF file and multiplex into\n"
+			"a multi-channel, single thread file.  <thread list> should be\n"
+			"comma-separated without space.  Setting <input file> to - will take\n"
+			"take input from stdin.  Likewise setting output file to - will\n"
+			"send output to stdout.  <offset> can be set to seek into the file.\n\n");
+	fprintf(stderr, "<inputFile> is the input multi-thread VDIF file, or - for stdin\n\n");
+	fprintf(stderr, "<inputFrameSize> is the size of one thread's data frame, including\n    header (for RDBE VDIF data this is 5032)\n\n");
+	fprintf(stderr, "<framesPerSecond> is the number of frames per second in the input\n    file for each thread (and is thus the number of output frames per\n    second as well)\n\n");
+	fprintf(stderr, "<threadList> is a comma-separated list of integers in range 0 to 1023;\n    the order of the numbers is significant and dictates the order of\n    channels in the output data\n\n");
+	fprintf(stderr, "<outputFile> is the name of the output, single-thread VDIF file,\n    or - for stdout\n\n");
+	fprintf(stderr, "<offset> is an optional offset into the input file (in bytes)\n\n");
+	fprintf(stderr, "<chunkSize> is (roughly) how many bytes to operate on at a time\n    [default=%d]\n\n", defaultChunkSize);
+	fprintf(stderr, "Options can include:\n");
+	fprintf(stderr, "  --help\n");
+	fprintf(stderr, "  -h        Print this help info and quit\n\n");
+	fprintf(stderr, "  --verbose\n");
+	fprintf(stderr, "  -v        Increase verbosity\n\n");
+	fprintf(stderr, "  --quiet\n");
+	fprintf(stderr, "  -q        Decrease verbosity\n\n");
+	fprintf(stderr, "  --noEDV4\n");
+	fprintf(stderr, "  -n        Don't make use of EDV4 (per-thread validity) in output\n\n");
+	fprintf(stderr, "  --EDV4\n");
+	fprintf(stderr, "  -e        Use of EDV4 (per-thread validity) in output [default]\n\n");
+	fprintf(stderr, "  --fanout <f>\n");
+	fprintf(stderr, "  -f <f>    Set fanout factor to <f> (used for some DBBC3 data) [default = 1]\n\n");
+	fprintf(stderr, "Note: as of version 0.5 this program supports multi-channel multi-thread input data\n\n");
+}
 
 int main(int argc, char **argv)
 {
 	unsigned char *src;
 	unsigned char *dest;
 	FILE *in, *out;
+	int verbose = 1;
 	int n, rv;
 	int threads[32];
 	int nThread;
-	int inputframesize;
+	int inputframesize = 0;
 	int nGap = 100;
 	int nSort = 20;
 	struct vdif_mux_statistics stats;
 	int leftover;
 	int srcChunkSize = defaultChunkSize*5/4;
 	int destChunkSize = defaultChunkSize;
-	int framesPerSecond;
+	int hasChunkSize = 0;
+	int framesPerSecond = 0;
 	long long nextFrame = -1;
-	const char *inFile;
-	const char *outFile;
+	const char *inFile = 0;
+	const char *outFile = 0;
+	const char *threadString = 0;
 	off_t offset = 0;
+	int hasOffset = 0;
 	int bitsPerSample = 0;
 	int nChanPerThread;
+	int fanoutFactor = 1;
 	const vdif_header *vh;
 	struct vdif_mux vm;
 	int flags = VDIF_MUX_FLAG_PROPAGATEVALIDITY;
+	int a;
 
-	if(argc < 6)
+	if(argc <= 1)
 	{
-		fprintf(stderr, "\n%s ver. %s  %s  %s\n\n", program, version, author, verdate);
-		fprintf(stderr, "Usage: %s <inputFile> <inputFrameSize> <framesPerSecond> <threadList>\n    <outputFile> [<offset> [ <nBit> [<chunkSize>] ] }\n", argv[0]);
-		fprintf(stderr, "\nA program to take a multi-thread VDIF file and multiplex into\n"
-				"a multi-channel, single thread file.  <thread list> should be\n"
-				"comma-separated without space.  Setting <input file> to - will take\n"
-				"take input from stdin.  Likewise setting output file to - will\n"
-				"send output to stdout.  <offset> can be set to seek into the file.\n\n");
-		fprintf(stderr, "<inputFile> is the input multi-thread VDIF file, or - for stdin\n\n");
-		fprintf(stderr, "<inputFrameSize> is the size of one thread's data frame, including\n    header (for RDBE VDIF data this is 5032)\n\n");
-		fprintf(stderr, "<framesPerSecond> is the number of frames per second in the input\n    file for each thread (and is thus the number of output frames per\n    second as well)\n\n");
-		fprintf(stderr, "<threadList> is a comma-separated list of integers in range 0 to 1023;\n    the order of the numbers is significant and dictates the order of\n    channels in the output data\n\n");
-		fprintf(stderr, "<outputFile> is the name of the output, single-thread VDIF file,\n    or - for stdout\n\n");
-		fprintf(stderr, "<offset> is an optional offset into the input file (in bytes)\n\n");
-		fprintf(stderr, "<nbit> is number of bits per sample (default: use value in VDIF header)\n\n");
-		fprintf(stderr, "<chunkSize> is (roughly) how many bytes to operate on at a time\n    [default=%d]\n\n", defaultChunkSize);
-		fprintf(stderr, "Note: as of version 0.5 this program supports multi-channel multi-thread input data\n\n");
+		usage(argv[0]);
 
 		return 0;
 	}
 
-	inFile = argv[1];
-	inputframesize = atoi(argv[2]);
-	framesPerSecond = atoi(argv[3]);
-	outFile = argv[5];
+	for(a = 1; a < argc; ++a)
+	{
+		if(argv[a][0] == '-')
+		{
+			if(strcmp(argv[a], "-h") == 0 || strcmp(argv[a], "--help") == 0)
+			{
+				usage(argv[0]);
 
+				return EXIT_SUCCESS;
+			}
+			else if(strcmp(argv[a], "-v") == 0 || strcmp(argv[a], "--verbose") == 0)
+			{
+				++verbose;
+			}
+			else if(strcmp(argv[a], "-q") == 0 || strcmp(argv[a], "--quiet") == 0)
+			{
+				--verbose;
+			}
+			else if(strcmp(argv[a], "-n") == 0 || strcmp(argv[a], "--noEDV4") == 0)
+			{
+				flags &= ~VDIF_MUX_FLAG_PROPAGATEVALIDITY;
+			}
+			else if(strcmp(argv[a], "-e") == 0 || strcmp(argv[a], "--EDV4") == 0)
+			{
+				flags |= VDIF_MUX_FLAG_PROPAGATEVALIDITY;
+			}
+			else if(a < argc - 1 && (strcmp(argv[a], "-f") == 0 || strcmp(argv[a], "--fanout") == 0))
+			{
+				++a;
+				fanoutFactor = atoi(argv[a]);
+				if(fanoutFactor < 1)
+				{
+					fprintf(stderr, "Error: fanout factor must be positive integer.  Was '%s'\n", argv[a]);
+
+					return EXIT_FAILURE;
+				}
+			}
+			else
+			{
+				fprintf(stderr, "Error: argument %d unknown option '%s'\n", a, argv[a]);
+
+				return EXIT_FAILURE;
+			}
+		}
+		else if(inFile == 0)
+		{
+			inFile = argv[a];
+			if(verbose > 2)
+			{
+				printf("Arg %d: Input file = %s\n", a, inFile);
+			}
+		}
+		else if(inputframesize == 0)
+		{
+			inputframesize = atoi(argv[a]);
+			if(inputframesize <= 0)
+			{
+				fprintf(stderr, "Error: Argument %d, '%s', should be a positive integer (input frame size)\n", a, argv[a]);
+
+				return EXIT_FAILURE;
+			}
+			if(verbose > 2)
+			{
+				printf("Arg %d: Input frame size = %d\n", a, inputframesize);
+			}
+		}
+		else if(framesPerSecond == 0)
+		{
+			framesPerSecond = atoi(argv[a]);
+			if(framesPerSecond <= 0)
+			{
+				fprintf(stderr, "Error: Argument %d, '%s', should be a positive integer (frames per second)\n", a, argv[a]);
+
+				return EXIT_FAILURE;
+			}
+			if(verbose > 2)
+			{
+				printf("Arg %d: Frames per second = %d\n", a, framesPerSecond);
+			}
+		}
+		else if(threadString == 0)
+		{
+			threadString = argv[a];
+			if(verbose > 2)
+			{
+				printf("Arg %d: Thread string = %s\n", a, threadString);
+			}
+		}
+		else if(outFile == 0)
+		{
+			outFile = argv[a];
+			if(verbose > 2)
+			{
+				printf("Arg %d: Output file = %s\n", a, outFile);
+			}
+		}
+		else if(hasOffset == 0)
+		{
+			hasOffset = 1;
+			offset = atoll(argv[a]);
+			if(verbose > 2)
+			{
+				printf("Arg %d: Offset = %Ld\n", a, (long long)offset);
+			}
+		}
+		else if(hasChunkSize == 0)
+		{
+			hasChunkSize = 1;
+			destChunkSize = atoi(argv[a]);
+			srcChunkSize = destChunkSize*5/4;
+			destChunkSize -= destChunkSize % 8;
+			srcChunkSize -= srcChunkSize % 8;
+			if(verbose > 2)
+			{
+				printf("Arg %d: Chunk size = %d\n", a, destChunkSize);
+			}
+		}
+		else
+		{
+			fprintf(stderr, "Unexpected argument %d, '%s'\n", a, argv[a]);
+
+			return EXIT_FAILURE;
+		}
+	}
 
 	for(n = nThread = 0; nThread < 32; ++nThread)
 	{
 		int c, p, i;
-		if(argv[4][n] == ',')
+		if(threadString[n] == ',')
 		{
 			++n;
 		}
-		c = sscanf(argv[4]+n, "%d%n", &(threads[nThread]), &p);
+		c = sscanf(threadString+n, "%d%n", &(threads[nThread]), &p);
 		n += p;	
 
 		if(c != 1)
@@ -130,25 +272,9 @@ int main(int argc, char **argv)
 	}
 	if(nThread == 0)
 	{
-		fprintf(stderr, "No threads parsable from list: %s\n", argv[4]);
+		fprintf(stderr, "No threads parsable from list: %s\n", threadString);
 
 		return EXIT_FAILURE;
-	}
-
-	if(argc > 6)
-	{
-		offset = atoll(argv[6]);
-	}
-	if(argc > 7)
-	{
-		bitsPerSample = atoi(argv[7]);
-	}
-	if(argc > 8)
-	{
-		destChunkSize = atoi(argv[8]);
-		srcChunkSize = destChunkSize*5/4;
-		destChunkSize -= destChunkSize % 8;
-		srcChunkSize -= srcChunkSize % 8;
 	}
 
 
@@ -254,7 +380,20 @@ int main(int argc, char **argv)
 		}
 	}
 
-	if(strcmp(outFile, "-") != 0)
+	if(fanoutFactor > 1)
+	{
+		fprintf(stderr, "Note: setting multiplex fanout to %d -- this is a new, untested feature\n", fanoutFactor);
+
+		rv = setvdifmuxfanoutfactor(&vm, fanoutFactor);
+		if(rv < 0)
+		{
+			fprintf(stderr, "Error adjusting vdifmux for fanout factor %d\n", fanoutFactor);
+
+			return EXIT_FAILURE;
+		}
+	}
+
+	if(verbose > 0 && strcmp(outFile, "-") != 0)
 	{
 		printvdifmux(&vm);
 	}
@@ -287,6 +426,11 @@ int main(int argc, char **argv)
 		if(V < 0)
 		{
 			break;
+		}
+
+		if(verbose > 2 && out != stdout)
+		{
+			printvdifmuxstatistics(&stats);
 		}
 
 		if(stats.startFrameNumber < 0)
@@ -348,7 +492,7 @@ int main(int argc, char **argv)
 		fclose(in);
 	}
 	
-	if(out != stdout)
+	if(verbose > 0 && out != stdout)
 	{
 		printvdifmuxstatistics(&stats);
 		fclose(out);
